# src/node/koa2_backend/swagger/swagger.yaml
@@ -9,10 +9,10 @@ consumes:
 produces:
   - application/json
 
-basePath: /
+basePath: /api
 
 paths:
-  /:
+  /index:
     get:
       tags: [INDEX]
       summary: basic info of alphacar
